Use UTC times in code and fix time differences

--- a/render/src/templates/index.html
+++ b/render/src/templates/index.html
@@ -640,7 +640,7 @@
         </div>
 
         <div class="Forecast-item Forecast-item--has-pre-header">
-          <div class="Forecast-item-pre-header">Thu</div>
+          <div id="forecast-item-pre-header" class="Forecast-item-pre-header">Thu</div>
 
           <div id="forecast-item-5-time" class="Forecast-item-time">9:00</div>
           <div class="Forecast-item-icon-container">
