--- a/render/src/templates/index.html
+++ b/render/src/templates/index.html
@@ -214,7 +214,7 @@
     }
 
     .SystemInfo-refresh-time-icon {
-      height: var(--text-size);
+      height: var(--text-size-s);
       margin-right: var(--space-1);
     }
 
@@ -377,7 +377,7 @@
 
     .Forecast-item-pre-header {
       position: absolute;
-      left: -0.1rem;
+      left: -1.2rem;
       top: 0.05rem;
       font-size: var(--text-size-s);
       color: var(--color-1);
