--- a/render/src/templates/index.html
+++ b/render/src/templates/index.html
@@ -377,6 +377,12 @@
       align-items: center;
     }
 
+    .Forecast-item--observation {
+      opacity: 0.5;
+    }
+
+    .Forecast-item--forecast {}
+
     .Forecast-item--has-pre-header {
       margin-left: 1rem;
       position: relative;
@@ -395,7 +401,7 @@
       margin-bottom: var(--space-1);
     }
 
-    .Forecast-item-icon {
+    .Forecast-item-icon-container {
       margin-bottom: var(--space-2);
       background: var(--color-0);
       width: 4.2rem;
@@ -405,6 +411,11 @@
       justify-content: center;
       align-items: center;
       border-radius: 1rem;
+    }
+
+    .Forecast-item-icon {
+      width: 100%;
+      height: 100%;
     }
 
     .Forecast-item-numbers {
@@ -545,7 +556,7 @@
         <div class="Forecast-today">
           Today
         </div>
-        <div class="Forecast-item">
+        <div id="forecast-item-0" class="Forecast-item">
           <div id="forecast-item-0-time" class="Forecast-item-time">09</div>
           <div class="Forecast-item-icon-container">
             <img id="forecast-item-0-icon" class="Forecast-item-icon" src="weather-icons/wi-cloudy-windy.svg" />
@@ -562,7 +573,7 @@
           </div>
         </div>
 
-        <div class="Forecast-item">
+        <div id="forecast-item-1" class="Forecast-item">
           <div id="forecast-item-1-time" class="Forecast-item-time">09</div>
           <div class="Forecast-item-icon-container">
             <img id="forecast-item-1-icon" class="Forecast-item-icon" src="weather-icons/wi-day-sunny.svg" />
@@ -579,7 +590,7 @@
           </div>
         </div>
 
-        <div class="Forecast-item">
+        <div id="forecast-item-2" class="Forecast-item">
           <div id="forecast-item-2-time" class="Forecast-item-time">09</div>
           <div class="Forecast-item-icon-container">
             <img id="forecast-item-2-icon" class="Forecast-item-icon" src="weather-icons/wi-day-sunny.svg" />
@@ -596,7 +607,7 @@
           </div>
         </div>
 
-        <div class="Forecast-item">
+        <div id="forecast-item-3" class="Forecast-item">
           <div id="forecast-item-3-time" class="Forecast-item-time">09</div>
           <div class="Forecast-item-icon-container">
             <img id="forecast-item-3-icon" class="Forecast-item-icon" src="weather-icons/wi-day-sunny.svg" />
@@ -613,7 +624,7 @@
           </div>
         </div>
 
-        <div class="Forecast-item">
+        <div id="forecast-item-4" class="Forecast-item">
           <div id="forecast-item-4-time" class="Forecast-item-time">09</div>
           <div class="Forecast-item-icon-container">
             <img id="forecast-item-4-icon" class="Forecast-item-icon" src="weather-icons/wi-day-sunny.svg" />
@@ -630,7 +641,7 @@
           </div>
         </div>
 
-        <div class="Forecast-item Forecast-item--has-pre-header">
+        <div id="forecast-item-5" class="Forecast-item Forecast-item--has-pre-header">
           <div id="forecast-item-pre-header" class="Forecast-item-pre-header">Thu</div>
 
           <div id="forecast-item-5-time" class="Forecast-item-time">09</div>
@@ -649,7 +660,7 @@
           </div>
         </div>
 
-        <div class="Forecast-item">
+        <div id="forecast-item-6" class="Forecast-item">
           <div id="forecast-item-6-time" class="Forecast-item-time">09</div>
           <div class="Forecast-item-icon-container">
             <img id="forecast-item-6-icon" class="Forecast-item-icon" src="weather-icons/wi-day-sunny.svg" />
@@ -666,7 +677,7 @@
           </div>
         </div>
 
-        <div class="Forecast-item">
+        <div id="forecast-item-7" class="Forecast-item">
           <div id="forecast-item-7-time" class="Forecast-item-time">09</div>
           <div class="Forecast-item-icon-container">
             <img id="forecast-item-7-icon" class="Forecast-item-icon" src="weather-icons/wi-day-sunny.svg" />
