--- a/render/src/templates/index.html
+++ b/render/src/templates/index.html
@@ -381,6 +381,16 @@
       opacity: 0.5;
     }
 
+    .Forecast-item--observation .Forecast-item-icon {
+      opacity: 0.2;
+    }
+
+    .Forecast-item--observation .Forecast-item-time,
+    .Forecast-item--observation .Forecast-item-numbers>* {
+      color: var(--color-1) !important;
+    }
+
+
     .Forecast-item--forecast {}
 
     .Forecast-item--has-pre-header {
