--- a/render/src/templates/index.html
+++ b/render/src/templates/index.html
@@ -381,6 +381,11 @@
       opacity: 0.5;
     }
 
+    .Forecast-item--observation .Forecast-item-icon-container {
+      background-color: transparent;
+      background: none;
+    }
+
     .Forecast-item--observation .Forecast-item-icon {
       opacity: 0.2;
     }
