Implement today and tomorrow temp and rain graphs with d3

--- a/render/src/templates/index.html
+++ b/render/src/templates/index.html
@@ -39,609 +39,21 @@
       src: url('fonts/Atkinson-Hyperlegible-BoldItalic-102a.woff2');
     }
 
-    /* Reset styles */
-
-    html,
-    body,
-    div,
-    p,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    span,
-    img,
-    a,
-    ul,
-    li,
-    button {
-      margin: 0;
-      padding: 0;
-    }
-
-    html {
-      box-sizing: border-box;
-    }
-
-    *,
-    *:before,
-    *:after {
-      box-sizing: inherit;
-    }
-
-    /* Variables */
-
-    :root {
-      --text-size-xxs: 0.7rem;
-      --text-size-xs: 0.833rem;
-      --text-size-s: 0.9rem;
-      --text-size: 1rem;
-      --text-size-m: 1.2rem;
-      --text-size-l: 1.44rem;
-      --text-size-xl: 1.728rem;
-      --text-size-xxl: 2.074rem;
-      --text-size-xxxl: 2.488rem;
-
-      --space-0: 0.125rem;
-      --space-1: 0.25rem;
-      --space-2: 0.5rem;
-      --space-3: 1rem;
-      --space-4: 2rem;
-      --space-5: 4rem;
-      --space-6: 8rem;
-      --space-7: 16rem;
-      --space-8: 32rem;
-
-      --color-0: #eee;
-      --color-1: #ccc;
-      --color-2: #999;
-      --color-3: #666;
-      --color-4: #333;
-      --color-5: #000;
-
-      --icon-opacity: 0.7;
-    }
-
-    /* Typography */
-
-    html {
-      font-family: 'Hyperlegible';
-      /*
-       * Base font-size. Ideally, everything else scales appropriately when this is changed.
-
-       * This is large because we render the page as a PNG. The device has quite high DPI.
-       * @see: https://dpi.lv/
-       */
-      font-size: 36px;
-    }
-
-    .Container {
-      /* Default to bold */
-      font-weight: bold;
-    }
-
-    .text {
-      font-size: var(--text-size);
-    }
-
-    .text-xxs {
-      font-size: var(--text-size-xxs);
-    }
-
-    .text-xs {
-      font-size: var(--text-size-xs);
-    }
-
-    .text-s {
-      font-size: var(--text-size-s);
-    }
-
-    .text-m {
-      font-size: var(--text-size-m);
-    }
-
-    .text-l {
-      font-size: var(--text-size-l);
-    }
-
-    .text-xl {
-      font-size: var(--text-size-xl);
-    }
-
-    .text-xxl {
-      font-size: var(--text-size-xxl);
-    }
-
-    .text-xxxl {
-      font-size: var(--text-size-xxxl);
-    }
-
-    h1 {
-      font-size: var(--text-size-xxl)
-    }
-
-    h2 {
-      font-size: var(--text-size-xl);
-    }
-
-    /* Main layout */
-
-    html,
-    body {
-      width: 100%;
-      height: 100%;
-    }
-
-    .Container {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .Top,
-    .Middle,
-    .Bottom {
-      padding-left: var(--space-3);
-      padding-right: var(--space-3);
-    }
-
-    .Middle {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-
-    /* Top section */
-
-    .Top {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      margin-top: var(--space-2);
-    }
-
-    .SystemInfo {
-      display: flex;
-      align-items: center;
-      height: 1.2rem;
-    }
-
-    .SystemInfo-refresh-time {
-      display: flex;
-      align-items: center;
-      margin-right: var(--space-3);
-    }
-
-    .SystemInfo-battery-value {
-      margin-left: var(--space-1);
-    }
-
-    .SystemInfo-battery-value,
-    .SystemInfo-refresh-time-value {
-      margin-top: 0.12rem;
-    }
-
-    .SystemInfo-refresh-time-icon {
-      height: var(--text-size-s);
-      margin-right: var(--space-1);
-    }
-
-    .SystemInfo-battery-icon {
-      height: var(--text-size-xl);
-    }
-
-    .Location {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      margin-top: var(--space-2);
-    }
-
-    /* Middle section */
-
-    .CurrentWeather {
-      display: flex;
-    }
-
-    .CurrentWeather>* {
-      flex-wrap: nowrap;
-      display: flex;
-      justify-content: center;
-    }
-
-    .CurrentWeather-summary {
-      flex-basis: 60%;
-      margin-right: 5%;
-    }
-
-    .CurrentWeather-icon {
-      position: relative;
-      width: 100%;
-    }
-
-    .CurrentWeather-icon>img {
-      position: absolute;
-      left: 50%;
-      top: 46%;
-      transform: translate(-50%, -50%);
-      height: 40vh;
-    }
-
-    .CurrentWeather-temperature {
-      position: relative;
-      display: flex;
-      align-items: flex-start;
-    }
-
-    .CurrentWeather-temperature-value {
-      font-size: 26vh;
-      font-weight: normal;
-    }
-
-    .CurrentWeather-temperature-unit {
-      font-size: 5vh;
-      margin-top: 4.8vh;
-      margin-left: 4px;
-    }
-
-    .CurrentWeather-details {
-      flex-direction: column;
-      padding-left: 0.8rem;
-      flex-basis: 40%;
-    }
-
-    .CurrentWeather-details h2 {
-      margin-bottom: var(--space-2);
-    }
-
-    .WeatherDetails {
-      list-style: none;
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
-      flex-wrap: wrap;
-      max-width: 18rem;
-    }
-
-    .WeatherDetails-item {
-      display: flex;
-      align-items: center;
-      height: 2.2rem;
-      width: 50%;
-    }
-
-    .WeatherDetails-item-icon-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: var(--text-size-xl);
-      margin-right: var(--space-2);
-      opacity: var(--icon-opacity);
-    }
-
-    .WeatherDetails-item-icon {
-      height: var(--text-size-l);
-    }
-
-    .WeatherDetails-item-icon-raindrops {
-      height: 2.7rem;
-      position: relative;
-      left: -0.1rem;
-      top: 0.05rem;
-    }
-
-    .WeatherDetails-item-value {
-      margin-right: 4px;
-      font-size: var(--text-size-m);
-    }
-
-    .WeatherDetails-item-unit {
-      font-size: var(--text-size-s);
-    }
-
-    /* Bottom section */
-
-    .Forecast {
-      padding-left: 1.5rem;
-      padding-right: 1rem;
-    }
-
-    .Forecast {
-      display: flex;
-      flex-direction: row;
-      padding-bottom: var(--space-3);
-    }
-
-    .Forecast-items {
-      position: relative;
-      display: flex;
-      flex-direction: row;
-    }
-
-    .Forecast-items>* {
-      width: 5.3rem;
-    }
-
-    .Histogram,
-    .Temperature-points {
-      height: 20%;
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-      align-items: flex-end;
-    }
-
-    .Temperature-points {
-      height: 15%;
-    }
-
-    .Histogram-bar,
-    .Temperature-point {
-      display: block;
-      position: relative;
-      --height: 0%;
-      height: var(--height);
-      flex: 1;
-      bottom: 0;
-      background: var(--color-1);
-    }
-
-
-    .Temperature-point {
-      background: none;
-    }
-
-    .Histogram-bar:first-of-type,
-    .Histogram-bar:last-of-type,
-    .Temperature-point:first-of-type,
-    .Temperature-point:last-of-type {
-      /* Manually calibrated to make middle histograms align with hour headers */
-      width: 1.5rem;
-      flex: 0 1 auto;
-    }
-
-    /* Last 3 and last 3 */
-    #histogram-tomorrow .Histogram-bar:nth-of-type(-n + 3),
-    #histogram-tomorrow .Histogram-bar:nth-last-of-type(-n + 3),
-    #histogram-tomorrow .Temperature-point:nth-of-type(-n + 3),
-    #histogram-tomorrow .Temperature-point:nth-last-of-type(-n + 3) {
-      /* Manually calibrated to make middle histograms align with hour headers */
-      width: 0.7rem;
-    }
-
-    /* To debug histogram hour alignments, set this block visible */
-    .Histogram-bar::before {
-      display: none;
-      content: var(--hour);
-      font-size: 10px;
-      position: absolute;
-      top: -30px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 10;
-    }
-
-    /* Temperature dots */
-    .Temperature-point {
-      display: block;
-      /* Full height of histogram */
-      height: 100%;
-      width: 100%;
-      position: relative;
-    }
-
-    .Temperature-point::after {
-      display: block;
-      content: "";
-      width: 4px;
-      height: 4px;
-      border-radius: 9999px;
-      background: var(--color-2);
-      position: absolute;
-      bottom: calc(2px + var(--temp-p-of-day-minmax));
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 20;
-    }
-
-    .Forecast-items-background1,
-    .Forecast-items-background2 {
-      position: absolute;
-      overflow: hidden;
-      top: 1.7rem;
-      background: var(--color-0);
-      height: 4.2rem;
-      border-radius: 1rem;
-      z-index: -1;
-      left: calc(5.3rem * var(--start-index) + var(--padding));
-      width: calc(5.3rem * (var(--end-index) + 1 - var(--start-index)) - 2 * var(--padding));
-    }
-
-    .Forecast-items-background1 {
-      --padding: 0.3rem;
-      --start-index: 0;
-      --end-index: 4;
-    }
-
-    .Forecast-items-background2 {
-      --padding: 0.3rem;
-      --start-index: 0;
-      --end-index: 2;
-    }
-
-    .Forecast:first-of-type {
-      padding-bottom: 2.3rem;
-    }
-
-    .Forecast-today-info {
-      font-size: var(--text-size-xl);
-      width: 6rem;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .Forecast-today-minmax-temperature {
-      margin-top: 0.5rem;
-      align-self: flex-start;
-      display: flex;
-      flex-direction: row;
-      white-space: nowrap;
-      font-size: var(--text-size);
-    }
-
-    .Forecast-today-icon>img {
-      width: 1.4rem;
-      height: 1.4rem;
-      opacity: 0.7;
-    }
-
-    .Forecast-today-minmax-temperature>* {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .Forecast-today-minmax-temperature-values>*,
-    .Forecast-today-minmax-temperature-icons>* {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: flex-end;
-    }
-
-    .Forecast-today-minmax-temperature-values>* {
-      height: 1.4rem;
-    }
-
-    .Forecast-today-minmax-temperature-icons>* {
-      height: 1.4rem;
-    }
-
-    .Forecast-today-minmax-temperature-unit {
-      font-size: var(--text-size-xs);
-      margin-left: 0.1rem;
-      margin-top: 0.16rem;
-      align-self: flex-start;
-    }
-
-    .Forecast-week .Forecast-items>* {
-      width: 6.3rem;
-    }
-
-    .Forecast-week-info {
-      font-size: var(--text-size-xl);
-      width: 6rem;
-    }
-
-    .Forecast-item {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .Forecast-item--observation {
-      opacity: 0.2;
-    }
-
-    .Forecast-item--observation .Forecast-item-icon-container {
-      background-color: transparent;
-      background: none;
-    }
-
-    .Forecast-item--observation .Forecast-item-time,
-    .Forecast-item--observation .Forecast-item-numbers>* {
-      color: var(--color-5) !important;
-    }
-
-    .Forecast-items--tomorrow {
-      margin-left: 1rem;
-    }
-
-    .Forecast-item--has-pre-header {
-      position: relative;
-    }
-
-    .Forecast-item-pre-header {
-      position: absolute;
-      left: -1.2rem;
-      top: 0.05rem;
-      font-size: var(--text-size-s);
-      color: var(--color-2);
-    }
-
-    .Forecast-item-time {
-      font-size: var(--text-size-m);
-      margin-bottom: var(--space-1);
-    }
-
-    .Forecast-item-icon-container {
-      margin-bottom: var(--space-2);
-      background: var(--color-0);
-      width: 4.2rem;
-      height: 4.2rem;
-      padding: 0.6rem;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 1rem;
-    }
-
-    .Forecast-today .Forecast-item-icon-container {
-      background: none;
-    }
-
-    .Forecast-item-icon {
-      width: 100%;
-      height: 100%;
-    }
-
-    .Forecast-item-numbers {
-      text-align: left;
-    }
-
-    .Forecast-item-value {
-      display: inline-block;
-      margin-right: var(--space-1);
-      width: 1.8rem;
-      text-align: right;
-    }
-
-    .Forecast-item-numbers>*:not(:first-child) {
-      color: var(--color-5);
-      font-weight: normal;
-    }
-
-    .Forecast-item-unit {
-      display: inline-block;
-      font-size: var(--text-size-xs);
-      width: 1.8rem;
-    }
-
-    .Forecast-item-temperature {
-      display: flex;
-      align-items: flex-start;
-      justify-content: flex-start;
-    }
-
-    .Forecast-item-temperature .Forecast-item-value {
-      margin-right: 2px;
-      font-size: var(--text-size-m);
-    }
-
-    .Forecast-item-temperature .Forecast-item-unit {
-      font-size: var(--text-size-s);
-      position: relative;
-      top: 1px;
-    }
   </style>
+
+  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" href="css/variables.css" />
+  <link rel="stylesheet" href="css/typography.css" />
+  <link rel="stylesheet" href="css/layout.css" />
+  <link rel="stylesheet" href="css/top-bar.css" />
+  <link rel="stylesheet" href="css/main.css" />
+  <script src="js/d3.v7.min.js"></script>
+
+  <!-- Will be filled with data by rendering -->
+  <!-- Will be filled with data by rendering -->
+  <script
+    id="data">const DATA = `{"todayDataPoints":[{"temperature":2.3,"precipitation1h":0,"localHour":8,"time":"2022-12-23T06:00:00.000Z"},{"temperature":2.3,"precipitation1h":0,"localHour":9,"time":"2022-12-23T07:00:00.000Z"},{"temperature":2.2,"precipitation1h":0,"localHour":10,"time":"2022-12-23T08:00:00.000Z"},{"temperature":2.3,"precipitation1h":0,"localHour":11,"time":"2022-12-23T09:00:00.000Z"},{"temperature":2.3,"precipitation1h":0,"localHour":12,"time":"2022-12-23T10:00:00.000Z"},{"temperature":2.4,"precipitation1h":0.1,"localHour":13,"time":"2022-12-23T11:00:00.000Z"},{"temperature":2.3,"precipitation1h":0.3,"localHour":14,"time":"2022-12-23T12:00:00.000Z"},{"temperature":2.5,"precipitation1h":0.8,"localHour":15,"time":"2022-12-23T13:00:00.000Z"},{"temperature":2.7,"precipitation1h":0.7,"localHour":16,"time":"2022-12-23T14:00:00.000Z"},{"temperature":3,"precipitation1h":0,"localHour":17,"time":"2022-12-23T15:00:00.000Z"},{"temperature":2.9,"precipitation1h":0.1,"localHour":18,"time":"2022-12-23T16:00:00.000Z"},{"temperature":0.7,"precipitation1h":0.3,"localHour":19,"time":"2022-12-23T17:00:00.000Z"},{"temperature":-0.4,"precipitation1h":0.2,"localHour":20,"time":"2022-12-23T18:00:00.000Z"},{"temperature":-0.8,"precipitation1h":0.1,"localHour":21,"time":"2022-12-23T19:00:00.000Z"},{"temperature":-1.2,"precipitation1h":0,"localHour":22,"time":"2022-12-23T20:00:00.000Z"}],"tomorrowDataPoints":[{"temperature":-0.4,"precipitation1h":0.2,"localHour":20,"time":"2022-12-23T18:00:00.000Z"},{"temperature":-0.8,"precipitation1h":0.1,"localHour":21,"time":"2022-12-23T19:00:00.000Z"},{"temperature":-1.2,"precipitation1h":0,"localHour":22,"time":"2022-12-23T20:00:00.000Z"},{"temperature":-1.9,"precipitation1h":0,"localHour":23,"time":"2022-12-23T21:00:00.000Z"},{"temperature":-2.5,"precipitation1h":0,"localHour":0,"time":"2022-12-23T22:00:00.000Z"},{"temperature":-2.8,"precipitation1h":0,"localHour":1,"time":"2022-12-23T23:00:00.000Z"},{"temperature":-2.9,"precipitation1h":0,"localHour":2,"time":"2022-12-24T00:00:00.000Z"},{"temperature":-2.8,"precipitation1h":0,"localHour":3,"time":"2022-12-24T01:00:00.000Z"},{"temperature":-2.7,"precipitation1h":0,"localHour":4,"time":"2022-12-24T02:00:00.000Z"},{"temperature":-2.7,"precipitation1h":0,"localHour":5,"time":"2022-12-24T03:00:00.000Z"},{"temperature":-2.8,"precipitation1h":0,"localHour":6,"time":"2022-12-24T04:00:00.000Z"},{"temperature":-2.7,"precipitation1h":0,"localHour":7,"time":"2022-12-24T05:00:00.000Z"},{"temperature":-2.8,"precipitation1h":0,"localHour":8,"time":"2022-12-24T06:00:00.000Z"},{"temperature":-2.9,"precipitation1h":0,"localHour":9,"time":"2022-12-24T07:00:00.000Z"},{"temperature":-3,"precipitation1h":0,"localHour":10,"time":"2022-12-24T08:00:00.000Z"},{"temperature":-2.7,"precipitation1h":0,"localHour":11,"time":"2022-12-24T09:00:00.000Z"},{"temperature":-2.1,"precipitation1h":0,"localHour":12,"time":"2022-12-24T10:00:00.000Z"},{"temperature":-1.7,"precipitation1h":0,"localHour":13,"time":"2022-12-24T11:00:00.000Z"},{"temperature":-1.6,"precipitation1h":0,"localHour":14,"time":"2022-12-24T12:00:00.000Z"},{"temperature":-1.9,"precipitation1h":0,"localHour":15,"time":"2022-12-24T13:00:00.000Z"},{"temperature":-2.4,"precipitation1h":0,"localHour":16,"time":"2022-12-24T14:00:00.000Z"},{"temperature":-2.7,"precipitation1h":0,"localHour":17,"time":"2022-12-24T15:00:00.000Z"},{"temperature":-2.8,"precipitation1h":0,"localHour":18,"time":"2022-12-24T16:00:00.000Z"},{"temperature":-3.1,"precipitation1h":0,"localHour":19,"time":"2022-12-24T17:00:00.000Z"},{"temperature":-3.3,"precipitation1h":0,"localHour":20,"time":"2022-12-24T18:00:00.000Z"},{"temperature":-3.5,"precipitation1h":0,"localHour":21,"time":"2022-12-24T19:00:00.000Z"},{"temperature":-3.9,"precipitation1h":0,"localHour":22,"time":"2022-12-24T20:00:00.000Z"}],"timeNow":"2022-12-23T18:31:00.613Z"}`</script>
+  <script src="js/main.js"></script>
 </head>
 
 <body>
@@ -763,19 +175,14 @@
           </div>
         </div>
 
-        <div class="Forecast-items">
-          <div id="forecast-items-background1" class="Forecast-items-background1">
-            <div id="histogram-today" class="Histogram" style="--start-index: 0; --count: 5;">
-              <div class="Histogram-bar" style="--height: 90%;"></div>
-              <div class="Histogram-bar" style="--height: 20%;"></div>
-              <div class="Histogram-bar" style="--height: 30%;"></div>
-              <div class="Histogram-bar" style="--height: 70%;"></div>
-              <div class="Histogram-bar" style="--height: 100%;"></div>
-              <div class="Histogram-bar" style="--height: 0%;"></div>
-              <div class="Histogram-bar" style="--height: 4%;"></div>
+        <div class="Forecast-items Forecast-items--today">
+          <div id="forecast-items-background1" class="Forecast-items-background" style="--start-index: 2; --count: 5;">
+            <svg id="temperature-graph-today-precipitation-outer" class="Graph Graph-outer"></svg>
+            <div class="Forecast-items-graybox">
+              <svg id="temperature-graph-today-precipitation-inner" class="Graph Graph-inner"></svg>
             </div>
-            <div id="temperature-points-today" class="Temperature-points" style="--start-index: 0; --count: 5;">
-            </div>
+
+            <svg id="temperature-graph-today-temp" class="Graph Graph-temp"></svg>
           </div>
 
           <div id="forecast-item-0" class="Forecast-item">
@@ -869,18 +276,11 @@
           </div>
         </div>
 
-        <div class="Forecast-items Forecast-items--tomorrow">
-          <div class="Forecast-items-background2">
-            <div id="histogram-tomorrow" class="Histogram" style="--start-index: 0; --count: 3;">
-              <div class="Histogram-bar" style="--height: 90%;"></div>
-              <div class="Histogram-bar" style="--height: 20%;"></div>
-              <div class="Histogram-bar" style="--height: 30%;"></div>
-              <div class="Histogram-bar" style="--height: 70%;"></div>
-              <div class="Histogram-bar" style="--height: 100%;"></div>
-              <div class="Histogram-bar" style="--height: 0%;"></div>
-              <div class="Histogram-bar" style="--height: 4%;"></div>
-            </div>
-            <div id="temperature-points-tomorrow" class="Temperature-points" style="--start-index: 0; --count: 3;">
+        <div class="Forecast-items Forecast-items--tomorrow" style="--start-index: 0;">
+          <div class="Forecast-items-background">
+            <div class="Forecast-items-graybox">
+              <svg id="temperature-graph-tomorrow-precipitation-inner" class="Graph Graph-inner"></svg>
+              <svg id="temperature-graph-tomorrow-temp" class="Graph Graph-temp"></svg>
             </div>
           </div>
 
